--- a/index.html
+++ b/index.html
@@ -11,6 +11,8 @@
     <title>Automation Project  </title>
     <!-- BOOTSTRAP CORE STYLE CSS -->
     <link href="assets/css/bootstrap.css" rel="stylesheet" />
+	<link href="https://fonts.googleapis.com/css2?family=Nunito:wght@400;700&family=Montserrat:wght@400;700&display=swap" rel="stylesheet">
+
     <!-- FONT AWESOME STYLE CSS -->
     <link href="assets/font-awesome-4.1.0/css/font-awesome.min.css" rel="stylesheet" />
     <!-- CUSTOM STYLE CSS -->
