--- a/index.html
+++ b/index.html
@@ -1,5 +1,31 @@
 ﻿<!DOCTYPE html>
 <html xmlns="http://www.w3.org/1999/xhtml">
+	<style>
+@font-face {
+    font-family: 'TextFont';
+    src: url('assets/fonts/Nunito-VariableFont_wght.ttf') format('woff2'),
+         url('assets/fonts/MyFont-Regular.woff') format('woff');
+    font-weight: normal;
+    font-style: normal;
+}
+
+@font-face {
+    font-family: 'HeadFont';
+    src: url('assets/fonts/Montserrat-VariableFont_wght.ttf') format('woff2'),
+         url('assets/fonts/MyFont-Regular.woff') format('woff');
+    font-weight: normal;
+    font-style: normal;
+}
+
+/* Пример использования шрифтов */
+body {
+    font-family: 'TextFont', sans-serif;
+}
+
+h1, h2, h3 {
+    font-family: 'HeadFont', sans-serif;
+}
+</style>
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1" />
