--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
                 style="margin-left: -222px; width:100%; max-width:453px; border-radius:10px; border: 1px solid black;">
             </div>
             <div style="text-align:left">
-                <h2 style="margin-top;">MY AUTOMATION PROJECT</h2>
+                <h2 style="margin-top";>MY AUTOMATION PROJECT</h2>
                 <br>
                 <p >
                     This project was developed using the website <a href="http://tutorialsninja.com/demo/index.php"> TutorialsNinja</a>,
