--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
     <div class="container">
         <div class="row pad-top">
             <div class="col-md-6 text-center" style="margin-left: -20px;">
-                <img src="./assets/img/GitHubProfile.jpeg" alt="Project Screenshot" 
+                <img src="/assets/img/GitHubProfile.jpeg" alt="Project Screenshot" 
                 style="margin-left: -222px; width:100%; max-width:453px; border-radius:10px; border: 1px solid black;">
             </div>
             <div style="text-align:left">
