--- a/index.html
+++ b/index.html
@@ -56,8 +56,7 @@
     <div class="container">
         <div class="row pad-top">
             <div class="col-md-6 text-center" style="margin-left: -20px;">
-                <img src="assets/img/GitHubProfile.jpeg" alt="Project Screenshot" 
-                style="margin-left: -222px; width:100%; max-width:453px; border-radius:10px; border: 1px solid black;">
+                <img src="/Users/artyomchernenko/Desktop/gitHub/WebSite/assets/img/GitHubProfile.jpeg" alt="Project Screenshot" class="photo">
             </div>
             <div style="text-align:left">
                 <h2 style="margin-top: ;">MY AUTOMATION PROJECT</h2>
