--- a/index.html
+++ b/index.html
@@ -70,10 +70,10 @@
                 </p>
                 <p>
                     <div class="video-container">
-                        <a href="https://www.youtube.com/watch?v=IWsQ7KigAig" target="_blank">
+                        <a href="https://www.youtube.com/watch?v=uG--MXnDPqs" target="_blank">
                             <iframe
                                 class="video"
-                                src="https://www.youtube.com/embed/IWsQ7KigAig"
+                                src="https://www.youtube.com/embed/uG--MXnDPqs"
                                 frameborder="0"
                                 allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
                                 allowfullscreen>
