--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
                     of such an online store, providing a comprehensive experience to practice scenarios commonly encountered in real-world projects.
                 </p>
                 <p>
-                    <div class="video-container">
+      <div class="video-container">
     <iframe 
         class="video"
         src="https://www.youtube.com/embed/MXnDPqs"
@@ -77,8 +77,7 @@
         allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
         allowfullscreen>
     </iframe>
-</div>
-                    <style>.video-container {
+</div>        <style>.video-container {
                         width: 500px; 
                         height: 281px; 
                         border: 1px solid black; 
