--- a/index.html
+++ b/index.html
@@ -69,15 +69,19 @@
                     of such an online store, providing a comprehensive experience to practice scenarios commonly encountered in real-world projects.
                 </p>
                 <p>
-      <div class="video-container">
-    <iframe 
-        class="video"
-        src="https://www.youtube.com/embed/MXnDPqs"
-        frameborder="0"
-        allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
-        allowfullscreen>
-    </iframe>
-</div>        <style>.video-container {
+   <div class="video-container">
+                        <a href="https://www.youtube.com/watch?v=MXnDPqs" target="_blank">
+                            <iframe
+                                class="video"
+                                src="https://www.youtube.com/embed/MXnDPqs"
+                                frameborder="0"
+                                allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+                                allowfullscreen>
+                            </iframe>
+                        </a>
+                    </div>
+		    
+		    <style>.video-container {
                         width: 500px; 
                         height: 281px; 
                         border: 1px solid black; 
