--- a/index.html
+++ b/index.html
@@ -63,17 +63,21 @@
                     of such an online store, providing a comprehensive experience to practice scenarios commonly encountered in real-world projects.
                 </p>
                 <p>
-<div class="video-container">
-                        <a href="https://www.youtube.com/watch?v=MXnDPqs" target="_blank">
-                            <iframe
-                                class="video"
-                                src="https://www.youtube.com/embed/MXnDPqs"
-                                frameborder="0"
-                                allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
-                                allowfullscreen>
-                            </iframe>
-                        </a>
-                    </div>
+      <div class="video-container">
+    <iframe
+        class="video"
+        src="https://www.youtube.com/embed/MXnDPqs"
+        frameborder="0"
+        allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+        allowfullscreen>
+    </iframe>
+    <p>
+        <a href="https://www.youtube.com/watch?v=MXnDPqs" target="_blank">
+            Открыть видео на YouTube
+        </a>
+    </p>
+</div>
+
 
 		    <style>.video-container {
                         width: 500px; 
