--- a/index.html
+++ b/index.html
@@ -63,20 +63,18 @@
                     of such an online store, providing a comprehensive experience to practice scenarios commonly encountered in real-world projects.
                 </p>
                 <p>
-      <div class="video-container">
-    <iframe
-        class="video"
-        src="https://www.youtube.com/embed/MXnDPqs"
-        frameborder="0"
-        allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
-        allowfullscreen>
-    </iframe>
-    <p>
-        <a href="https://www.youtube.com/watch?v=MXnDPqs" target="_blank">
-            Открыть видео на YouTube
-        </a>
-    </p>
-</div>
+   <div class="video-container">
+        <iframe 
+            src="https://www.youtube.com/embed/MXnDPqs"
+            frameborder="0"
+            allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+            allowfullscreen>
+        </iframe>
+    </div>
+    
+    <a class="video-link" href="https://www.youtube.com/watch?v=MXnDPqs" target="_blank">
+        Смотреть на YouTube
+    </a>
 
 
 		    <style>.video-container {
