--- a/index.html
+++ b/index.html
@@ -1,4 +1,5 @@
-<!DOCTYPE html>
+
+﻿<!DOCTYPE html>
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
     <meta charset="utf-8" />
@@ -56,8 +57,7 @@
     <div class="container">
         <div class="row pad-top">
             <div class="col-md-6 text-center" style="margin-left: -20px;">
-                <img src="assets/img/GitHubProfile.jpeg" alt="Project Screenshot" 
-                style="margin-left: -222px; width:100%; max-width:453px; border-radius:10px; border: 1px solid black;">
+                <img src="assets/img/GitHubProfile.jpeg" alt="Project Screenshot" class="photo">
             </div>
             <div style="text-align:left">
                 <h2 style="margin-top: ;">MY AUTOMATION PROJECT</h2>
